force-app/main/default/objects/Garage__c/Garage__c.object-meta.xml
<CustomObject>
    <label>Garage</label>
    <nameField>
        <label>Garage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Garages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>