force-app/main/default/objects/Garage__c/fields/Location_Country__c.field-meta.xml
<CustomField>
    <fullName>Location_Country__c</fullName>
    <label>Location Country</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Location_State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>United States of America</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>