force-app/main/default/objects/Garage__c/fields/Location_State__c.field-meta.xml
<CustomField>
    <fullName>Location_State__c</fullName>
    <label>Location State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>OH</fullName>
            </value>
            <value>
                <fullName>TX</fullName>
            </value>
            <value>
                <fullName>AZ</fullName>
            </value>
            <value>
                <fullName>NY</fullName>
            </value>
            <value>
                <fullName>FL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>