force-app/main/default/objects/Garage__c/fields/Location_Street__c.field-meta.xml
<CustomField>
    <fullName>Location_Street__c</fullName>
    <label>Location Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>