force-app/main/default/objects/Garage__c/fields/Location_Zip__c.field-meta.xml
<CustomField>
    <fullName>Location_Zip__c</fullName>
    <label>Location Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>