force-app/main/default/objects/Garage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Location_City__c</columns>
    <columns>Location__Latitude__s</columns>
    <columns>Location__Longitude__s</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>